# CatanSolver

./: .dockerignore  .gitignore  Dockerfile  README.md  plan.md  pyproject.toml  requirements.txt
catansolver/: __init__.py
catansolver/advisor/: __init__.py  pimc.py  turn_advisor.py
catansolver/api/: __init__.py  app.py  (+1 more)
docs/: advisor-calibration.md  advisor-strength.md  heuristic-accuracy.md  heuristic-eval-data.csv  heuristic-eval-stats.json  learned-value.md  opening-winprob.md  opening_calibrator.json  opening_calibrator_advisor.json  opening_gap_model.json  phase0-findings.md  recalibration.json  value_model.json  winprob-coeffs.json  winprob-first_final-data.csv  winprob-second-data.csv  winprob-vp-coeffs.json  winprob-vp-data.csv
scripts/: advise_demo.py  belief_demo.py  board_bank_prototype.py  calibrate_advisor.py  calibrate_opening.py  calibrate_opening_advisor.py  calibrate_opening_heuristic.py  calibrate_winprob.py  calibrate_winprob_vp.py  dev-shell.ps1  evaluate_advisor.py  evaluate_depth.py  evaluate_search_scaling.py  evaluate_value.py  fit_recalibration.py  heuristic_eval.py  opening_leverage.py  pimc_demo.py  recommend_demo.py  tournament.py  train_value.py  value_h2h.py
spikes/: catanatron_spike.py
tests/: test_adapter.py  test_api.py  test_arena.py  test_beliefs.py  test_calibration.py  test_engine_friendly_robber.py  test_learn.py  test_opening_value.py  test_pimc.py  test_placement.py  test_practice.py  test_recalibrate.py  test_schema.py  test_spiral.py  test_state_adapter.py  test_tournament.py  test_turn_advisor.py  test_winprob.py
(+31 files in other folders)
